--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ html, body{
 /* Важно: делаем верхний “пустой” блок больше высоты вьюпорта контейнера,
    чтобы приветствие НЕ было видно/обрезано на первом кадре. */
 .prologueSpacerTop{
-  height: calc(100% + 40px);
+  height: 0px;
 }
 
 /* Сам блок приветствия делаем высотой экрана контейнера:
